Added AGEATDIAGNOSIS, calculated from BIRTHDATE.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -63,6 +63,7 @@
     "from zero_dates import   zero_dates\n",
     "\n",
     "global custom_prep_filename\n",
+    "global global_subtype_loop_row\n",
     "\n",
     "#===============================================================\n",
     "custom_prep_fullpath = os.path.join(\".\", study_identifier +\"_custom_caisis_prep.py\") # Can override this to any location you like.\n",
@@ -70,7 +71,7 @@
     "\n",
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
-    "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History', 'Status']\n",
+    "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History', 'Status', 'Clinical Stages']\n",
     "date_format = '%Y-%m-%d'  # e.g. 2021-01-23\n",
     "\n",
     "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the zero date. Default is 30.\n",
@@ -390,6 +391,8 @@
     "    date_lookup_index=None, date_lookup_table_with_dates=None):\n",
     "\n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
+    "    global global_subtype_loop_row\n",
+    "\n",
     "    print(\"INFO starting to import for event_type of....\")\n",
     "    print(str(event_type))\n",
     "    print(\"... .\")\n",
@@ -546,8 +549,14 @@
     "                # print('wwww subtype_source is...')\n",
     "                # print(subtype_source)\n",
     "                # print(str(row))\n",
-    "                # print('val...')\n",
-    "                val = str(row[subtype_source]).strip()\n",
+    "                print('GET val from subtype...')\n",
+    "                val = 'unknown'\n",
+    "                if callable(subtype_source):\n",
+    "                    print('Calling subtype_source...')\n",
+    "                    global_subtype_loop_row = row\n",
+    "                    val = subtype_source()\n",
+    "                else:\n",
+    "                    val = str(row[subtype_source]).strip()\n",
     "                if these_subtype_rewrites:\n",
     "                    key = val.lower()\n",
     "                    if key in these_subtype_rewrites:\n",
@@ -725,16 +734,17 @@
    "source": [
     "def import_fields_to_event_tables():\n",
     "    global core_timeline_fields, datafiles_fields\n",
+    "    global global_subtype_loop_row\n",
     "\n",
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "\n",
     "    print(\"\\nSTEP 4: Import to events tables.\")\n",
-    "    import_fields = [\n",
-    "        ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
-    "        ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
-    "    ]\n",
-    "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
-    "    add_fields('timeline-encounters', import_fields)\n",
+    "    # import_fields = [\n",
+    "    #     ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
+    "    #     ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
+    "    # add_fields('timeline-encounters', import_fields)\n",
     "\n",
     "    import_fields = [\n",
     "        ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
@@ -745,46 +755,71 @@
     "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
     "    add_fields('timeline-radiation', import_fields)\n",
     "\n",
-    "    import_fields = [\n",
-    "        # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
-    "        ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
-    "    ]\n",
-    "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
-    "    add_fields('timeline-medicaltherapy', import_fields)\n",
+    "#ClinStageDisease\tClinStageGroup\tClinStageSystem\tClinStageT\tClinStageN\tClinStageM\tClinStageS\tClinStageSide\tClinStageRecurrent\tClinStageRecurrentType\tClinStageResectable\n",
+    "\n",
+    "    def clin_stage_subtype():\n",
+    "        # global global_subtype_loop_row\n",
+    "        if global_subtype_loop_row:\n",
+    "            print(\"global_subtype_loop_row...\")\n",
+    "            print(str(global_subtype_loop_row))\n",
+    "            stageT = \"-\" if str(global_subtype_loop_row[\"ClinStageT\"])==\"nan\" else str(global_subtype_loop_row[\"ClinStageT\"] )\n",
+    "            stageN = \"-\" if str(global_subtype_loop_row[\"ClinStageN\"])==\"nan\" else str(global_subtype_loop_row[\"ClinStageN\"] )\n",
+    "            stageM = \"-\" if str(global_subtype_loop_row[\"ClinStageM\"])==\"nan\" else str(global_subtype_loop_row[\"ClinStageM\"] )\n",
+    "            return stageT +\".\"+ stageN +\".\"+ stageM\n",
+    "        else:\n",
+    "            return 'unknown' \n",
     "\n",
     "    import_fields = [\n",
-    "        ImportField('STATUS', final_name='STATUS')\n",
+    "        ImportField('ClinStageSystem', final_name='StageSystem' ) ,   \n",
+    "        ImportField('ClinStageT', final_name='StageT' ) ,   \n",
+    "        ImportField('ClinStageN', final_name='StageN' ) ,   \n",
+    "        ImportField('ClinStageM', final_name='StageM' ) ,   \n",
+    "        ImportField('ClinStageS', final_name='StageS' ) ,   \n",
     "    ]\n",
-    "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
-    "        '1st Progression',\n",
-    "        '2nd Progression',\n",
-    "        '3rd Progression',\n",
-    "        'Last Status Check',\n",
-    "        'Recurrence',\n",
-    "        'Local Recurrence',\n",
-    "        'Locoregional',\n",
-    "        'Metastatic Disease',\n",
-    "        'New Diagnosis',\n",
-    "        'Newly Diagnosed',\n",
-    "        'No Evidence of Disease',\n",
+    "    import_to_event_table('timeline-clinicalstages', 'Clinical Stages', import_fields, event_type='CLINICALSTAGES', start_date_col_name='ClinStageDate', stop_date_col_name='ClinStageDate', subtype_source=clin_stage_subtype, graph_marker=graph_marker_types[\"triangles\"] )\n",
+    "    add_fields('timeline-clinicalstages', import_fields)\n",
     "\n",
-    "        ] )\n",
-    "    add_fields('timeline-status', import_fields)\n",
+    "\n",
+    "    # import_fields = [\n",
+    "    #     # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
+    "    #     ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
+    "    # add_fields('timeline-medicaltherapy', import_fields)\n",
+    "\n",
+    "    # import_fields = [\n",
+    "    #     ImportField('STATUS', final_name='STATUS')\n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
+    "    #     '1st Progression',\n",
+    "    #     '2nd Progression',\n",
+    "    #     '3rd Progression',\n",
+    "    #     'Last Status Check',\n",
+    "    #     'Recurrence',\n",
+    "    #     'Local Recurrence',\n",
+    "    #     'Locoregional',\n",
+    "    #     'Metastatic Disease',\n",
+    "    #     'New Diagnosis',\n",
+    "    #     'Newly Diagnosed',\n",
+    "    #     'No Evidence of Disease',\n",
+    "\n",
+    "    #     ] )\n",
+    "    # add_fields('timeline-status', import_fields)\n",
     "    \n",
-    "    import_fields = [\n",
-    "        ImportField('PathHistology', final_name='Histology' ) ,   \n",
-    "        ImportField('PathSpecimenType', final_name='SampleType' ) ,   \n",
-    "        ImportField('PathStageT', final_name='StageT' ) ,   \n",
-    "        ImportField('PathStageN', final_name='StageN' ) ,   \n",
-    "        ImportField('PathStageM', final_name='StageM' ) ,   \n",
-    "        ImportField('PathGrade', final_name='Grade' ) ,   \n",
-    "        ImportField('PATHOLOGY', final_name='PATHOLOGY') \n",
-    "    ]\n",
-    "    import_to_event_table('timeline-pathology', 'Pathology', import_fields, \n",
-    "        event_type='PATHOLOGY', start_date_col_name='ProcDate', stop_date_col_name='ProcDate', subtype_source=\"PathHistology\", graph_marker=graph_marker_types[\"triangles\"],\n",
-    "        date_lookup_index=\"ProcedureId\", date_lookup_table_with_dates=\"Procedures\"\n",
-    "         )\n",
-    "    add_fields('timeline-pathology', import_fields)\n",
+    "    # import_fields = [\n",
+    "    #     ImportField('PathHistology', final_name='Histology' ) ,   \n",
+    "    #     ImportField('PathSpecimenType', final_name='SampleType' ) ,   \n",
+    "    #     ImportField('PathStageT', final_name='StageT' ) ,   \n",
+    "    #     ImportField('PathStageN', final_name='StageN' ) ,   \n",
+    "    #     ImportField('PathStageM', final_name='StageM' ) ,   \n",
+    "    #     ImportField('PathGrade', final_name='Grade' ) ,   \n",
+    "    #     ImportField('PATHOLOGY', final_name='PATHOLOGY') \n",
+    "    # ]\n",
+    "    # import_to_event_table('timeline-pathology', 'Pathology', import_fields, \n",
+    "    #     event_type='PATHOLOGY', start_date_col_name='ProcDate', stop_date_col_name='ProcDate', subtype_source=\"PathHistology\", graph_marker=graph_marker_types[\"triangles\"],\n",
+    "    #     date_lookup_index=\"ProcedureId\", date_lookup_table_with_dates=\"Procedures\"\n",
+    "    #      )\n",
+    "    # add_fields('timeline-pathology', import_fields)\n",
     "\n",
     "\n"
    ]
