Strip " marks from output

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,15 +8,15 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
-    "diseaseChosen = 'Brain'  \n",
-    "study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
-    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
-    "\n",
-    "# dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
-    "# diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "# study_identifier = 'sarcoma_caisis'  \n",
+    "# dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
+    "# diseaseChosen = 'Brain'  \n",
+    "# study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
     "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "\n",
+    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
+    "diseaseChosen = 'Sarcoma'  #'Brain'\n",
+    "study_identifier = 'sarcoma_caisis'  \n",
+    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
     "# diseaseChosen = 'Liver Cancer'   \n",
@@ -755,8 +755,6 @@
     "    import_to_event_table('timeline-radiation', 'Radiation', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
     "    add_fields('timeline-radiation', import_fields)\n",
     "\n",
-    "#ClinStageDisease\tClinStageGroup\tClinStageSystem\tClinStageT\tClinStageN\tClinStageM\tClinStageS\tClinStageSide\tClinStageRecurrent\tClinStageRecurrentType\tClinStageResectable\n",
-    "\n",
     "    def clin_stage_subtype():\n",
     "        # global global_subtype_loop_row\n",
     "        if global_subtype_loop_row:\n",
@@ -780,46 +778,46 @@
     "    add_fields('timeline-clinicalstages', import_fields)\n",
     "\n",
     "\n",
-    "    # import_fields = [\n",
-    "    #     # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
-    "    #     ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
-    "    # add_fields('timeline-medicaltherapy', import_fields)\n",
+    "    import_fields = [\n",
+    "        # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
+    "        ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
+    "    ]\n",
+    "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
+    "    add_fields('timeline-medicaltherapy', import_fields)\n",
     "\n",
-    "    # import_fields = [\n",
-    "    #     ImportField('STATUS', final_name='STATUS')\n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
-    "    #     '1st Progression',\n",
-    "    #     '2nd Progression',\n",
-    "    #     '3rd Progression',\n",
-    "    #     'Last Status Check',\n",
-    "    #     'Recurrence',\n",
-    "    #     'Local Recurrence',\n",
-    "    #     'Locoregional',\n",
-    "    #     'Metastatic Disease',\n",
-    "    #     'New Diagnosis',\n",
-    "    #     'Newly Diagnosed',\n",
-    "    #     'No Evidence of Disease',\n",
+    "    import_fields = [\n",
+    "        ImportField('STATUS', final_name='STATUS')\n",
+    "    ]\n",
+    "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
+    "        '1st Progression',\n",
+    "        '2nd Progression',\n",
+    "        '3rd Progression',\n",
+    "        'Last Status Check',\n",
+    "        'Recurrence',\n",
+    "        'Local Recurrence',\n",
+    "        'Locoregional',\n",
+    "        'Metastatic Disease',\n",
+    "        'New Diagnosis',\n",
+    "        'Newly Diagnosed',\n",
+    "        'No Evidence of Disease',\n",
     "\n",
-    "    #     ] )\n",
-    "    # add_fields('timeline-status', import_fields)\n",
+    "        ] )\n",
+    "    add_fields('timeline-status', import_fields)\n",
     "    \n",
-    "    # import_fields = [\n",
-    "    #     ImportField('PathHistology', final_name='Histology' ) ,   \n",
-    "    #     ImportField('PathSpecimenType', final_name='SampleType' ) ,   \n",
-    "    #     ImportField('PathStageT', final_name='StageT' ) ,   \n",
-    "    #     ImportField('PathStageN', final_name='StageN' ) ,   \n",
-    "    #     ImportField('PathStageM', final_name='StageM' ) ,   \n",
-    "    #     ImportField('PathGrade', final_name='Grade' ) ,   \n",
-    "    #     ImportField('PATHOLOGY', final_name='PATHOLOGY') \n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-pathology', 'Pathology', import_fields, \n",
-    "    #     event_type='PATHOLOGY', start_date_col_name='ProcDate', stop_date_col_name='ProcDate', subtype_source=\"PathHistology\", graph_marker=graph_marker_types[\"triangles\"],\n",
-    "    #     date_lookup_index=\"ProcedureId\", date_lookup_table_with_dates=\"Procedures\"\n",
-    "    #      )\n",
-    "    # add_fields('timeline-pathology', import_fields)\n",
+    "    import_fields = [\n",
+    "        ImportField('PathHistology', final_name='Histology' ) ,   \n",
+    "        ImportField('PathSpecimenType', final_name='SampleType' ) ,   \n",
+    "        ImportField('PathStageT', final_name='StageT' ) ,   \n",
+    "        ImportField('PathStageN', final_name='StageN' ) ,   \n",
+    "        ImportField('PathStageM', final_name='StageM' ) ,   \n",
+    "        ImportField('PathGrade', final_name='Grade' ) ,   \n",
+    "        ImportField('PATHOLOGY', final_name='PATHOLOGY') \n",
+    "    ]\n",
+    "    import_to_event_table('timeline-pathology', 'Pathology', import_fields, \n",
+    "        event_type='PATHOLOGY', start_date_col_name='ProcDate', stop_date_col_name='ProcDate', subtype_source=\"PathHistology\", graph_marker=graph_marker_types[\"triangles\"],\n",
+    "        date_lookup_index=\"ProcedureId\", date_lookup_table_with_dates=\"Procedures\"\n",
+    "         )\n",
+    "    add_fields('timeline-pathology', import_fields)\n",
     "\n",
     "\n"
    ]
@@ -907,7 +905,7 @@
     "                output_row.append(cleaned_item)\n",
     "                i=i+1\n",
     "\n",
-    "            items_to_str = '\\t'.join(output_row)\n",
+    "            items_to_str = '\\t'.join(output_row).replace('\"', ' ')\n",
     "            f.write(items_to_str + \"\\n\")\n"
    ]
   },
