--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -8,15 +8,15 @@
    "source": [
     "# CaisisImport. A utility to prepare a Caisis-to-Excel export for import into Oncoscape (via cBioPortal format).\n",
     "\n",
-    "# dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
-    "# diseaseChosen = 'Brain'  \n",
-    "# study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
-    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
-    "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
-    "diseaseChosen = 'Sarcoma'  #'Brain'\n",
-    "study_identifier = 'sarcoma_caisis'  \n",
+    "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
+    "diseaseChosen = 'Brain'  \n",
+    "study_identifier = 'brain_abc'  #used for copying brain_abc_custom_caisis_prep.py to this folder as custom_caisis_prep.py.\n",
     "type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "\n",
+    "# dataset_folder = '../Caisis_NonPublicData/Sarcoma_nov2021'   \n",
+    "# diseaseChosen = 'Sarcoma'  #'Brain'\n",
+    "# study_identifier = 'sarcoma_caisis'  \n",
+    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Liver_nov2021'   \n",
     "# diseaseChosen = 'Liver Cancer'   \n",
