Added import_status_to_event_table_from_patient, to process static Death and LastAlive patient values as events.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -376,6 +376,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add patient's DEATHDATE as a \"Death\" event.\n",
+    "def import_status_to_event_table_from_patient(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", \n",
+    "    start_date_col_name=None, stop_date_col_name=None, subtype_source=None, patient_column=\"unknown\", final_name=\"unknown\"):\n",
+    "\n",
+    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
+    "    global global_subtype_loop_row\n",
+    "\n",
+    "    print(\"Add patient's \" + patient_column+ \" as a \"+ final_name +\" event.....\")\n",
+    "    if (tname in loaded_tables_dict) == False:\n",
+    "        print(\"WARN -- Could not process table \"+tname)\n",
+    "    else:\n",
+    "        rows_to_save = []\n",
+    "        # column_names = [\"PatientId\", \"EVENT_TYPE\", \"START_DATE\", \"STOP_DATE\", \"STATUS\"]\n",
+    "        # patient_table = loaded_tables_dict['patient']\n",
+    "        # print(\">>> patient tbl...\")\n",
+    "        # print(patient_table)\n",
+    "\n",
+    "        #      current_table = loaded_tables_dict[tname]\n",
+    "\n",
+    "\n",
+    "        # Loop through rows in patient_table_rows_of_dict.\n",
+    "        # data_clinical_patient , not patients_first_dx\n",
+    "        patient_table_rows_of_dict = data_clinical_patient.to_dict('records')\n",
+    "        for row in patient_table_rows_of_dict:\n",
+    "            print(\"patient row for status = \" +str(row))\n",
+    "\n",
+    "            # common to all events: pid, type, start, and stop.\n",
+    "            pid = str(row['PatientId'])\n",
+    "            start_date = row[patient_column]\n",
+    "            print(\"patient STARTDATE===== \"+str(start_date))\n",
+    "            if(str(start_date)!=\"NaT\"):\n",
+    "                stop_date = start_date\n",
+    "\n",
+    "                #print('pid='+pid+', etype='+etype+', start='+str(start_date)+',  stop='+str(stop_date)+'.')\n",
+    "                \n",
+    "                new_row = [pid, \"STATUS\", start_date, stop_date, final_name]\n",
+    "                print(\"new_row= \" +str(new_row))\n",
+    "\n",
+    "                # print(new_row)\n",
+    "                rows_to_save.append(new_row)\n",
+    "\n",
+    "        # # turn list into df.\n",
+    "        # new_values = data_clinical_patient['PatientId'].apply(get_field_value)\n",
+    "        # data_clinical_patient[ifield.final_name] = new_values\n",
+    "        # print(data_clinical_patient.head(12))\n",
+    "        print('>>> TBD: append these rows to table.')\n",
+    "\n",
+    "\n",
+    "        # print(type(column_names))\n",
+    "        # print(column_names)\n",
+    "        # print('---- end of column_names ---')\n",
+    "\n",
+    "        column_names = column_names = [\"PatientId\", \"EVENT_TYPE\", \"START_DATE\", \"STOP_DATE\", \"STATUS\"]\n",
+    "        added_df = pd.DataFrame(rows_to_save, columns=column_names)\n",
+    "        df_original = data_clinical_timeline_dfs[event_table_name]\n",
+    "        df_new = pd.concat([df_original, added_df], axis=0)\n",
+    "        data_clinical_timeline_dfs[event_table_name] = df_new\n",
+    "\n",
+    "        # data_clinical_timeline_graph_markers[event_table_name] = graph_marker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_clinical_timeline_dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#\n",
     "# event_table_name: name of table as it will appear in \"data_clinical_<timeline-foo>.txt\" filename. For events, should be \"timeline-foo\".\n",
     "# tname: Name of the dataframe table we have loaded from CSV, which contains these events to import.\n",
@@ -739,12 +815,13 @@
     "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
     "\n",
     "    print(\"\\nSTEP 4: Import to events tables.\")\n",
-    "    # import_fields = [\n",
-    "    #     ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
-    "    #     ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
-    "    # ]\n",
-    "    # import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
-    "    # add_fields('timeline-encounters', import_fields)\n",
+    "\n",
+    "    import_fields = [\n",
+    "        ImportField('EncECOG_Score', final_name='ECOG', type='NUMBER') ,   #, conversion_function=None),\n",
+    "        ImportField('EncKPS', final_name='KPS', type='NUMBER') ,   #, conversion_function=None),\n",
+    "    ]\n",
+    "    import_to_event_table('timeline-encounters', 'Encounters', import_fields, event_type='ENCOUNTERS', start_date_col_name='EncDate', stop_date_col_name='EncDate', graph_marker=graph_marker_types[\"diamonds\"] )\n",
+    "    add_fields('timeline-encounters', import_fields)\n",
     "\n",
     "    import_fields = [\n",
     "        ImportField('RadTxType', final_name='RadTxType' ) ,   \n",
@@ -780,7 +857,9 @@
     "\n",
     "    import_fields = [\n",
     "        # TBD: Add future fields, like  ImportField('MedDose', final_name='Dose' ) ,   \n",
-    "        ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY') \n",
+    "        ImportField('MEDICALTHERAPY', final_name='MEDICALTHERAPY'),\n",
+    "        ImportField('MedTxAgent', final_name='MedTxAgent' )  \n",
+    "        \n",
     "    ]\n",
     "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
     "    add_fields('timeline-medicaltherapy', import_fields)\n",
@@ -803,6 +882,15 @@
     "\n",
     "        ] )\n",
     "    add_fields('timeline-status', import_fields)\n",
+    "\n",
+    "    # Add patient's DEATHDATE as a \"Death\" event.\n",
+    "    import_status_to_event_table_from_patient('timeline-status', 'Status', import_fields, \n",
+    "        event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", patient_column=\"DeathDate\", final_name=\"Death\" )\n",
+    "\n",
+    "    # Add patient's LASTALIVEDATE as a \"LastAlive\" event.\n",
+    "    import_status_to_event_table_from_patient('timeline-status', 'Status', import_fields, \n",
+    "        event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", patient_column=\"LastAliveDate\", final_name=\"LastAlive\" )\n",
+    "\n",
     "    \n",
     "    import_fields = [\n",
     "        ImportField('PathHistology', final_name='Histology' ) ,   \n",
@@ -817,9 +905,7 @@
     "        event_type='PATHOLOGY', start_date_col_name='ProcDate', stop_date_col_name='ProcDate', subtype_source=\"PathHistology\", graph_marker=graph_marker_types[\"triangles\"],\n",
     "        date_lookup_index=\"ProcedureId\", date_lookup_table_with_dates=\"Procedures\"\n",
     "         )\n",
-    "    add_fields('timeline-pathology', import_fields)\n",
-    "\n",
-    "\n"
+    "    add_fields('timeline-pathology', import_fields)\n"
    ]
   },
   {
@@ -1066,7 +1152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_meta_files(dir)"
+    "write_meta_files(dir) "
    ]
   }
  ],
