Screen events by disease name and Eligible column. Don't write Death events if date in Demographics is empty; it;s not an error, it's just we don't know if they've died.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -393,7 +393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add patient's DEATHDATE as a \"Death\" event.\n",
+    "# Add patient's DEATHDATE as a \"Death\" event. If NaT|<empty str>|-1234, do not add.\n",
     "def import_status_to_event_table_from_patient(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", \n",
     "    start_date_col_name=None, stop_date_col_name=None, subtype_source=None, patient_column=\"unknown\", final_name=\"unknown\"):\n",
     "\n",
@@ -423,7 +423,7 @@
     "            pid = str(row['PatientId'])\n",
     "            start_date = row[patient_column]\n",
     "            # print(\"patient STARTDATE===== \"+str(start_date))\n",
-    "            if(str(start_date)!=\"NaT\"):\n",
+    "            if(str(start_date)!=\"NaT\" and str(start_date)!=\"\" and str(start_date)!=\"-1234\"  ):\n",
     "                stop_date = start_date\n",
     "\n",
     "                #print('pid='+pid+', etype='+etype+', start='+str(start_date)+',  stop='+str(stop_date)+'.')\n",
@@ -481,7 +481,7 @@
     "\n",
     "def import_to_event_table(event_table_name, tname, import_fields:List[ImportField], event_type=\"EVENT\", \n",
     "    start_date_col_name=None, stop_date_col_name=None, subtype_source=None, graph_marker=None, safelist=None,\n",
-    "    date_lookup_index=None, date_lookup_table_with_dates=None):\n",
+    "    date_lookup_index=None, date_lookup_table_with_dates=None, disease_must_match_field=None):\n",
     "\n",
     "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list, has_custom_prep_file\n",
     "    global global_subtype_loop_row\n",
@@ -596,7 +596,19 @@
     "\n",
     "\n",
     "            #print('pid='+pid+', etype='+etype+', start='+str(start_date)+',  stop='+str(stop_date)+'.')\n",
-    "            \n",
+    "\n",
+    "            # \"Eligible\" field can be used for arbitrary filtering ahead of time, such as in Excel. Only allow rows with \"Yes\"for Eligible.\n",
+    "            if row[\"Eligible\"] != \"Yes\":\n",
+    "                row_is_good = False\n",
+    "\n",
+    "            # disease_must_match_field screens out events not related to our current disease.\n",
+    "            if disease_must_match_field is not None:\n",
+    "                disease_of_this_event = str(row[disease_must_match_field])\n",
+    "                if disease_of_this_event == diseaseChosen or disease_of_this_event == diseaseChosen+\" Cancer\" or disease_of_this_event == diseaseChosen+\" CA\" :\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    row_is_good = False\n",
+    "\n",
     "            if row_is_good:\n",
     "                new_row = [pid, \n",
     "                    process_val(etype, core_timeline_fields[0]), \n",
@@ -641,8 +653,8 @@
     "                        pass    \n",
     "                        # TBD: log that we can't find the field\n",
     "\n",
-    "                print(\"new_row....\")\n",
-    "                print(*new_row, sep = \", \")\n",
+    "                # print(\"new_row....\")\n",
+    "                # print(*new_row, sep = \", \")\n",
     "\n",
     "                if subtype_source is not None:\n",
     "                    # print('wwww subtype_source is...')\n",
@@ -735,7 +747,7 @@
     "                def get_field_value(pid):\n",
     "                    global current_lookup_field, noval_list, global_gg\n",
     "\n",
-    "                    print(\"pid \" + pid + \", current_lookup_field \"+ifield.source_name+\", field \"+ dataval_field+\", matchTo \"+matching_val+\". gg size is...\")\n",
+    "                    # print(\"pid \" + pid + \", current_lookup_field \"+ifield.source_name+\", field \"+ dataval_field+\", matchTo \"+matching_val+\". gg size is...\")\n",
     "                    gg = current_table.loc[ (current_table['PatientId'] == str(pid))  & (current_table[dataval_field] == str(matching_val))  ]\n",
     "                    print(gg.size)\n",
     "                    \n",
@@ -859,7 +871,7 @@
     "        ImportField('RadTxTotalDose', final_name='RadTxTotalDose' ) ,\n",
     "        ImportField('RADIATION', final_name='RADIATION' ) ,   \n",
     "    ]\n",
-    "    import_to_event_table('timeline-radiation', 'Radiation Therapy', import_fields, event_type='RADIATION', start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
+    "    import_to_event_table('timeline-radiation', 'Radiation Therapy', import_fields, event_type='RADIATION', disease_must_match_field=\"RadTxDisease\", start_date_col_name='RadTxDate', stop_date_col_name='RadTxStopDate', subtype_source=\"RadTxType\", graph_marker=graph_marker_types[\"arcs\"] )\n",
     "    add_fields('timeline-radiation', import_fields)\n",
     "\n",
     "    def clin_stage_subtype():\n",
@@ -881,7 +893,7 @@
     "        ImportField('ClinStageM', final_name='StageM' ) ,   \n",
     "        ImportField('ClinStageS', final_name='StageS' ) ,   \n",
     "    ]\n",
-    "    import_to_event_table('timeline-clinicalstages', 'Clinical Stages', import_fields, event_type='CLINICALSTAGES', start_date_col_name='ClinStageDate', stop_date_col_name='ClinStageDate', subtype_source=clin_stage_subtype, graph_marker=graph_marker_types[\"triangles\"] )\n",
+    "    import_to_event_table('timeline-clinicalstages', 'Clinical Stages', import_fields, event_type='CLINICALSTAGES', disease_must_match_field=\"ClinStageDisease\", start_date_col_name='ClinStageDate', stop_date_col_name='ClinStageDate', subtype_source=clin_stage_subtype, graph_marker=graph_marker_types[\"triangles\"] )\n",
     "    add_fields('timeline-clinicalstages', import_fields)\n",
     "\n",
     "\n",
@@ -891,13 +903,13 @@
     "        ImportField('MedTxAgent', final_name='MedTxAgent' )  \n",
     "        \n",
     "    ]\n",
-    "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
+    "    import_to_event_table('timeline-medicaltherapy', 'Medical Therapy', import_fields, event_type='MEDICALTHERAPY', disease_must_match_field=\"MedTxDisease\", start_date_col_name='MedTxDate', stop_date_col_name='MedTxStopDate', subtype_source=\"MedTxAgent\" )\n",
     "    add_fields('timeline-medicaltherapy', import_fields)\n",
     "\n",
     "    import_fields = [\n",
     "        ImportField('STATUS', final_name='STATUS')\n",
     "    ]\n",
-    "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
+    "    import_to_event_table('timeline-status', 'Status', import_fields, event_type='STATUS', disease_must_match_field=\"StatusDisease\", start_date_col_name='StatusDate', stop_date_col_name='StatusDate', subtype_source=\"Status\", safelist=[\n",
     "        '1st Progression',\n",
     "        '2nd Progression',\n",
     "        '3rd Progression',\n",
