--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -18,20 +18,20 @@
     "# study_identifier = 'sarcoma_caisis'  \n",
     "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
-    "dataset_folder = '../Caisis_NonPublicData/Breast_March2022'   \n",
-    "diseaseChosen = 'Breast Cancer'  #'Brain'\n",
-    "study_identifier = 'breast_caisis'  \n",
-    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "# dataset_folder = '../Caisis_NonPublicData/Breast_March2022'   \n",
+    "# diseaseChosen = 'Breast Cancer'  #'Brain'\n",
+    "# study_identifier = 'breast_caisis'  \n",
+    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Liver_March2022'   \n",
     "# diseaseChosen = 'Liver Cancer'   \n",
     "# study_identifier = 'liver_caisis' \n",
     "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
-    "# dataset_folder = '../Caisis_NonPublicData/Pancreas_March2022'   \n",
-    "# diseaseChosen = 'Pancreas Cancer'  #'Brain'\n",
-    "# study_identifier = 'pancreas_caisis'  \n",
-    "# type_of_cancer = \"misc\"  # Use cbioportal term\n",
+    "dataset_folder = '../Caisis_NonPublicData/Pancreas_March2022'   \n",
+    "diseaseChosen = 'Pancreas Cancer'  #'Brain'\n",
+    "study_identifier = 'pancreas_caisis'  \n",
+    "type_of_cancer = \"misc\"  # Use cbioportal term\n",
     "\n",
     "# dataset_folder = '../Caisis_NonPublicData/Lymphoma_March2022'   \n",
     "# diseaseChosen = 'Lymphoma'  #'Brain'\n",
@@ -540,7 +540,6 @@
     "        current_table_rows_of_dict = current_table.to_dict('records')\n",
     "\n",
     "        for row in current_table_rows_of_dict:\n",
-    "\n",
     "            etype = None\n",
     "            if event_type in row:  # get event from the event_type column\n",
     "                etype = row[event_type]\n",
@@ -551,7 +550,7 @@
     "            pid = str(row['PatientId'])\n",
     "            \n",
     "            row_is_good = True\n",
-    "\n",
+    "                \n",
     "            # ======== Get start and stop dates =======\n",
     "            start_date = missing_date\n",
     "            if start_date_col_name != None:\n",
@@ -604,7 +603,7 @@
     "            # disease_must_match_field screens out events not related to our current disease.\n",
     "            if disease_must_match_field is not None:\n",
     "                disease_of_this_event = str(row[disease_must_match_field])\n",
-    "                if disease_of_this_event == diseaseChosen or disease_of_this_event == diseaseChosen+\" Cancer\" or disease_of_this_event == diseaseChosen+\" CA\" :\n",
+    "                if disease_of_this_event == diseaseChosen or disease_of_this_event == diseaseChosen+\" Cancer\" or disease_of_this_event == diseaseChosen+\" CA\" or disease_of_this_event+\" Cancer\" == diseaseChosen :\n",
     "                    pass\n",
     "                else:\n",
     "                    row_is_good = False\n",
@@ -652,9 +651,6 @@
     "                    else: \n",
     "                        pass    \n",
     "                        # TBD: log that we can't find the field\n",
-    "\n",
-    "                # print(\"new_row....\")\n",
-    "                # print(*new_row, sep = \", \")\n",
     "\n",
     "                if subtype_source is not None:\n",
     "                    # print('wwww subtype_source is...')\n",
@@ -893,6 +889,7 @@
     "        ImportField('ClinStageM', final_name='StageM' ) ,   \n",
     "        ImportField('ClinStageS', final_name='StageS' ) ,   \n",
     "    ]\n",
+    "    print(\"======================= staging\")\n",
     "    import_to_event_table('timeline-clinicalstages', 'Clinical Stages', import_fields, event_type='CLINICALSTAGES', disease_must_match_field=\"ClinStageDisease\", start_date_col_name='ClinStageDate', stop_date_col_name='ClinStageDate', subtype_source=clin_stage_subtype, graph_marker=graph_marker_types[\"triangles\"] )\n",
     "    add_fields('timeline-clinicalstages', import_fields)\n",
     "\n",
@@ -1084,6 +1081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Guts of processing\n",
     "find_patients_first_dx()\n",
     "print(patients_first_dx.shape)\n",
     "load_all_tables()\n",
